--- a/scss/layout/_layout.scss
+++ b/scss/layout/_layout.scss
@@ -1,10 +1,11 @@
 .grid-wrapper {
+  width: 100%;
   display: grid;
   grid-template-columns: 1fr;
   grid-auto-rows: auto;
 
   @include mq(l) {
-    grid-template-columns: max-content 1fr;
+    grid-template-columns: 1fr;
   }
 }
 
@@ -20,8 +21,8 @@
 .grid-content-wrapper {
   @include mq(l) {
     position: relative;
-    height: 100%;
-    width: calc(100vw - 200px);
+    width: 100%;
+    width: calc(100% - 200px);
     margin-left: 200px;
   }
 }
